# collectdfs

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  README  clean.sh  configure.ac
src/: .gitignore  Makefile.am  client.cc  client.h  common.h  entry.cc  entry.h  fs.cc  fs.h  main.cc  stat_tree.cc  stat_tree.h  wrapper.cc  wrapper.h
